foi criada a primeira parte do projeto

--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <title>Jean Centeno</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="img-container">
+        <img src="images/avatar.png" alt="icono de usuario" />
+      </div>
+
+      <nav class="nav-items">
+        <a href="">Presentacion</a>
+        <a href="">Formacion</a>
+        <a href="">Experiencia</a>
+        <a href="">Proyectos</a>
+        <a href="">Contacto</a>
+      </nav>
+    </header>
+    <div class="img-fondo-container">
+      <img src="images/montana.jfif" alt="montanas" />
+    </div>
+    <section id="presentacion">
+      <div class="presentacion-content">
+        <div class="perfil-redes-container">
+          <div class="perfil-redes">
+            <a href="" class="github-link">
+              <img
+                src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+                alt=""
+              />
+            </a>
+
+            <a href="" class="linkedin-link">
+              <img
+                src="https://img1.gratispng.com/20180518/igo/kisspng-computer-icons-linkedin-5aff028346b5a9.9646664715266617632896.jpg"
+                alt=""
+              />
+            </a>
+
+            <a href="" class="facebook-link">
+              <img
+                src="https://w7.pngwing.com/pngs/201/692/png-transparent-logo-facebook-black-and-white-computer-icons-facebook-photography-logo-black-and-white.png"
+                alt=""
+              />
+            </a>
+          </div>
+        </div>
+        <div class="presentacion-container">
+          <h1>Jean Centeno</h1>
+          <p class="titulo">Ingeniero Aeronautico</p>
+          <h3>Ola!</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+            consequuntur earum molestias quibusdam voluptas ipsa saepe inventore
+            deleniti commodi. Debitis soluta quas animi, ut eveniet praesentium
+            molestiae voluptates a dolorum.
+          </p>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
