foi creada a secao de formacao y experiencia

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
       <div class="img-container">
         <img src="images/avatar.png" alt="icono de usuario" />
       </div>
-
       <nav class="nav-items">
-        <a href="">Presentacion</a>
-        <a href="">Formacion</a>
-        <a href="">Experiencia</a>
-        <a href="">Proyectos</a>
-        <a href="">Contacto</a>
+        <a href="#presentacion">Presentacion</a>
+        <a href="#formacion">Formacion</a>
+        <a href="#experiencia">Experiencia</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#contacto">Contacto</a>
       </nav>
     </header>
     <div class="img-fondo-container">
@@ -33,21 +32,33 @@
       <div class="presentacion-content">
         <div class="perfil-redes-container">
           <div class="perfil-redes">
-            <a href="" class="github-link">
+            <a
+              target="_blank"
+              href="https://github.com/JeanM-Pro"
+              class="github-link"
+            >
               <img
                 src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
                 alt=""
               />
             </a>
 
-            <a href="" class="linkedin-link">
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/jean-centeno-37962b218/"
+              class="linkedin-link"
+            >
               <img
                 src="https://img1.gratispng.com/20180518/igo/kisspng-computer-icons-linkedin-5aff028346b5a9.9646664715266617632896.jpg"
                 alt=""
               />
             </a>
 
-            <a href="" class="facebook-link">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/JeanMCenteno/"
+              class="facebook-link"
+            >
               <img
                 src="https://w7.pngwing.com/pngs/201/692/png-transparent-logo-facebook-black-and-white-computer-icons-facebook-photography-logo-black-and-white.png"
                 alt=""
@@ -65,6 +76,30 @@
             deleniti commodi. Debitis soluta quas animi, ut eveniet praesentium
             molestiae voluptates a dolorum.
           </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="formacion">
+      <div class="formacion-container">
+        <h2>Formacion</h2>
+        <!-- Tarjeta de formacion  -->
+        <div class="formacion-item">
+          <p class="anio">2004 - 2009</p>
+          <p class="diploma">Bachiller en ciencias</p>
+          <p class="institucion">Liceo Bolivariano Prof. Jesus Lopez Castro</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="experiencia">
+      <div class="experiencia-container">
+        <h2>Experiencia</h2>
+        <!-- Tarjeta de formacion  -->
+        <div class="experiencia-item">
+          <p class="anio">2004 - 2009</p>
+          <p class="diploma">Bachiller en ciencias</p>
+          <p class="institucion">Liceo Bolivariano Prof. Jesus Lopez Castro</p>
         </div>
       </div>
     </section>
