se crearon las secciones de proyectos y contacto

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Google fonts  -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Bootstrap  -->
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="index.css" />
     <title>Jean Centeno</title>
   </head>
@@ -103,5 +114,238 @@
         </div>
       </div>
     </section>
+
+    <!-- Seccion de Proyectos  -->
+    <section id="proyectos">
+      <div class="card-container">
+        <h2>Proyectos</h2>
+
+        <div class="cards-content">
+          <div class="card">
+            <img
+              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              class="card-img-top"
+              alt="proyecto de html"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Proyecto html y css</h5>
+              <p class="card-text">
+                Este es un prouyecto creado con html y css como practica de
+                estudio.
+              </p>
+              <div class="botones">
+                <a
+                  target="_blank"
+                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  class="btn btn-primary"
+                  >Respositorio</a
+                >
+                <a
+                  target="_blank"
+                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  class="btn btn-primary"
+                  >Proyecto</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              class="card-img-top"
+              alt="proyecto de html"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Proyecto html y css</h5>
+              <p class="card-text">
+                Este es un prouyecto creado con html y css como practica de
+                estudio.
+              </p>
+              <div class="botones">
+                <a
+                  target="_blank"
+                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  class="btn btn-primary"
+                  >Respositorio</a
+                >
+                <a
+                  target="_blank"
+                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  class="btn btn-primary"
+                  >Proyecto</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              class="card-img-top"
+              alt="proyecto de html"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Proyecto html y css</h5>
+              <p class="card-text">
+                Este es un prouyecto creado con html y css como practica de
+                estudio.
+              </p>
+              <div class="botones">
+                <a
+                  target="_blank"
+                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  class="btn btn-primary"
+                  >Repositorio</a
+                >
+                <a
+                  target="_blank"
+                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  class="btn btn-primary"
+                  >Proyecto</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              class="card-img-top"
+              alt="proyecto de html"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Proyecto de javascript</h5>
+              <p class="card-text">
+                Este es un prouyecto creado con html y css como practica de
+                estudio.
+              </p>
+              <div class="botones">
+                <a
+                  target="_blank"
+                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  class="btn btn-primary"
+                  >Repositorio</a
+                >
+                <a
+                  target="_blank"
+                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  class="btn btn-primary"
+                  >Proyecto</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Seccion de contacto  -->
+    <section id="contacto">
+      <div class="contacto-container">
+        <h2>Contacto</h2>
+        <div class="contacto-content">
+          <div class="contacto-informacion">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
+              commodi ex beatae animi.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
+              nesciunt, animi ipsam nihil unde tempore, t necessit.
+            </p>
+            <div class="iconos-contacto">
+              <a
+                target="_blank"
+                href="https://github.com/JeanM-Pro"
+                class="github-link-2"
+              >
+                <img
+                  src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+                  alt=""
+                />
+              </a>
+
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/jean-centeno-37962b218/"
+                class="linkedin-link-2"
+              >
+                <img
+                  src="https://img1.gratispng.com/20180518/igo/kisspng-computer-icons-linkedin-5aff028346b5a9.9646664715266617632896.jpg"
+                  alt=""
+                />
+              </a>
+
+              <a
+                target="_blank"
+                href="https://www.facebook.com/JeanMCenteno/"
+                class="facebook-link-2"
+              >
+                <img
+                  src="https://w7.pngwing.com/pngs/201/692/png-transparent-logo-facebook-black-and-white-computer-icons-facebook-photography-logo-black-and-white.png"
+                  alt=""
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="formulario-container">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Nombre</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="Escribe tu nombre"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Email</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="xxxx@ddd.com"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Asunto</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="Escribe tu asunto"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >Mensaje</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
+              ></textarea>
+            </div>
+            <div class="btn-form-container">
+              <button class="btn btn-primary bg-dark">Enviar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
