--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
   <body>
     <header>
       <div class="img-container">
-        <img src="images/avatar.png" alt="icono de usuario" />
+        <img src="images/yop.png" alt="icono de usuario" />
       </div>
       <nav class="nav-items">
-        <a href="#presentacion">Presentacion</a>
-        <a href="#formacion">Formacion</a>
-        <a href="#experiencia">Experiencia</a>
-        <a href="#proyectos">Proyectos</a>
-        <a href="#contacto">Contacto</a>
+        <a href="#presentacion">Apresentação</a>
+        <a href="#formacion">Formação</a>
+        <a href="#experiencia">Experiência</a>
+        <a href="#proyectos">Projetos </a>
+        <a href="#contacto">Contato</a>
       </nav>
     </header>
     <div class="img-fondo-container">
-      <img src="images/montana.jfif" alt="montanas" />
+      <img src="images/fondo.png" alt="montanas" />
     </div>
     <section id="presentacion">
       <div class="presentacion-content">
@@ -77,14 +77,17 @@
           </div>
         </div>
         <div class="presentacion-container">
-          <h1>Jean Centeno</h1>
-          <p class="titulo">Ingeniero Aeronautico</p>
+          <h1>Jean M. Centeno R.</h1>
+          <p class="titulo">Engenheiro Aeronáutico / Desenvolvedor Front End</p>
           <h3>Ola!</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
-            consequuntur earum molestias quibusdam voluptas ipsa saepe inventore
-            deleniti commodi. Debitis soluta quas animi, ut eveniet praesentium
-            molestiae voluptates a dolorum.
+            Sou formado em Engenharia Aeronáutica pela Universidade Militar
+            Bolivariana da Venezuela, Núcleo Aviação. Sou apaixonado por
+            tecnologia e estudo desenvolvimento de software por conta própria há
+            mais de 2 anos. Tenho conhecimento básico em linguagens como HTML,
+            CSS3, JavaScript e em algumas bibliotecas como React.js, React
+            Native, Next.js, além de bibliotecas de CSS como Bootstrap, Sass,
+            Tailwind e AntDesign.
           </p>
         </div>
       </div>
@@ -92,24 +95,75 @@
 
     <section id="formacion">
       <div class="formacion-container">
-        <h2>Formacion</h2>
+        <h2>Formação</h2>
         <!-- Tarjeta de formacion  -->
         <div class="formacion-item">
           <p class="anio">2004 - 2009</p>
-          <p class="diploma">Bachiller en ciencias</p>
-          <p class="institucion">Liceo Bolivariano Prof. Jesus Lopez Castro</p>
+          <p class="diploma">Ensino Médio</p>
+          <p class="institucion">
+            Liceo Bolivariano Prof. Jesus Lopez Castro. El Tigrito - Venezuela.
+          </p>
+        </div>
+
+        <div class="formacion-item">
+          <p class="anio">2010 - 2014</p>
+          <p class="diploma">
+            Bacharel em Ciências e Artes Militares, Menção: Mecânica
+            Aeronáutica.
+          </p>
+          <p class="institucion">
+            Universidad Militar Bolivariana de Venezuela, Núcleo Aviación
+            (Universidade Militar Bolivariana da Venezuela, Núcleo de Aviação).
+            Maracay - Venezuela
+          </p>
+        </div>
+
+        <div class="formacion-item">
+          <p class="anio">2021 - 2021</p>
+          <p class="diploma">Curso de Design Responsivo de Websites.</p>
+          <p class="institucion">freecodecamp</p>
+        </div>
+
+        <div class="formacion-item">
+          <p class="anio">2021 - 2021</p>
+          <p class="diploma">
+            Curso de Algoritmos e Estruturas de Dados em JavaScript.
+          </p>
+          <p class="institucion">freecodecamp</p>
+        </div>
+
+        <div class="formacion-item">
+          <p class="anio">2021 - 2021</p>
+          <p class="diploma">
+            Curso de Bibliotecas de Desenvolvimento Front End.
+          </p>
+          <p class="institucion">freecodecamp</p>
+        </div>
+
+        <div class="formacion-item">
+          <p class="anio">2022 - 2022</p>
+          <p class="diploma">Curso de React: Hooks e MERN.</p>
+          <p class="institucion">udemy</p>
+        </div>
+
+        <div class="formacion-item">
+          <p class="anio">2022 - 2022</p>
+          <p class="diploma">Curso de Introdução ao Figma.</p>
+          <p class="institucion">Domestika</p>
         </div>
       </div>
     </section>
 
     <section id="experiencia">
       <div class="experiencia-container">
-        <h2>Experiencia</h2>
+        <h2>Experiência</h2>
         <!-- Tarjeta de formacion  -->
         <div class="experiencia-item">
-          <p class="anio">2004 - 2009</p>
-          <p class="diploma">Bachiller en ciencias</p>
-          <p class="institucion">Liceo Bolivariano Prof. Jesus Lopez Castro</p>
+          <p class="anio">2010 - 2020</p>
+          <p class="diploma">Militar Activo</p>
+          <p class="institucion">
+            Força Armada Nacional Bolivariana. Venezuela.
+          </p>
         </div>
       </div>
     </section>
@@ -117,33 +171,35 @@
     <!-- Seccion de Proyectos  -->
     <section id="proyectos">
       <div class="card-container">
-        <h2>Proyectos</h2>
+        <h2>Projetos</h2>
 
         <div class="cards-content">
           <div class="card">
             <img
-              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              src="https://i.ibb.co/Kjy5Pbs/pomodoro-project.png"
               class="card-img-top"
               alt="proyecto de html"
             />
             <div class="card-body">
-              <h5 class="card-title">Proyecto html y css</h5>
-              <p class="card-text">
-                Este es un prouyecto creado con html y css como practica de
-                estudio.
-              </p>
+              <div class="card-letter">
+                <h5 class="card-title">Pomodoro Clock</h5>
+                <p class="card-text">
+                  Eu criei um cronômetro pomodoro como prática de lógica de
+                  programação.
+                </p>
+              </div>
               <div class="botones">
                 <a
                   target="_blank"
-                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  href="https://github.com/JeanM-Pro/Proyecto-Reloj/tree/main"
                   class="btn btn-primary"
                   >Respositorio</a
                 >
                 <a
                   target="_blank"
-                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  href="https://jeanm-pro.github.io/Proyecto-Reloj/"
                   class="btn btn-primary"
-                  >Proyecto</a
+                  >Site</a
                 >
               </div>
             </div>
@@ -151,56 +207,59 @@
 
           <div class="card">
             <img
-              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              src="https://i.ibb.co/rkfS3pJ/curriculum-project.png"
               class="card-img-top"
               alt="proyecto de html"
             />
             <div class="card-body">
-              <h5 class="card-title">Proyecto html y css</h5>
-              <p class="card-text">
-                Este es un prouyecto creado con html y css como practica de
-                estudio.
-              </p>
+              <div class="card-letter">
+                <h5 class="card-title">Gerador de Currículo Vitae</h5>
+                <p class="card-text">
+                  Criei um gerador de currículos vitae como prática de
+                  manipulação e criação de formulários com React.js.
+                </p>
+              </div>
               <div class="botones">
                 <a
                   target="_blank"
-                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  href="https://github.com/JeanM-Pro/CV-Project"
                   class="btn btn-primary"
                   >Respositorio</a
                 >
                 <a
                   target="_blank"
-                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  href="https://jeanm-pro.github.io/CV-Project/"
                   class="btn btn-primary"
-                  >Proyecto</a
+                  >Site</a
                 >
               </div>
             </div>
           </div>
           <div class="card">
             <img
-              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              src="https://i.ibb.co/FshBZdH/calculadora-project.png"
               class="card-img-top"
               alt="proyecto de html"
             />
             <div class="card-body">
-              <h5 class="card-title">Proyecto html y css</h5>
-              <p class="card-text">
-                Este es un prouyecto creado con html y css como practica de
-                estudio.
-              </p>
+              <div class="card-letter">
+                <h5 class="card-title">Calculadora</h5>
+                <p class="card-text">
+                  Calculadora feita do zero para praticar JavaScript.
+                </p>
+              </div>
               <div class="botones">
                 <a
                   target="_blank"
-                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  href="https://github.com/JeanM-Pro/Proyecto-calculadora"
                   class="btn btn-primary"
                   >Repositorio</a
                 >
                 <a
                   target="_blank"
-                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  href="https://jeanm-pro.github.io/Proyecto-calculadora/"
                   class="btn btn-primary"
-                  >Proyecto</a
+                  >Site</a
                 >
               </div>
             </div>
@@ -208,28 +267,28 @@
 
           <div class="card">
             <img
-              src="https://i.ibb.co/hgsqzPM/proyecto-1.png"
+              src="https://i.ibb.co/y4V3pjW/lista-de-tareas-project.png"
               class="card-img-top"
               alt="proyecto de html"
             />
             <div class="card-body">
-              <h5 class="card-title">Proyecto de javascript</h5>
+              <h5 class="card-title">Lista de tarefas.</h5>
               <p class="card-text">
-                Este es un prouyecto creado con html y css como practica de
-                estudio.
+                Lista de tarefas feita com HTML, CSS e JavaScript, é um dos meus
+                primeiros projetos de prática.
               </p>
               <div class="botones">
                 <a
                   target="_blank"
-                  href="https://codepen.io/jeancenteno/pen/OJpqROw"
+                  href="https://github.com/JeanM-Pro/App-Lista-de-tareas"
                   class="btn btn-primary"
                   >Repositorio</a
                 >
                 <a
                   target="_blank"
-                  href="https://jeanm-pro.github.io/P-gina-de-documentaci-n-t-cnica/"
+                  href="https://jeanm-pro.github.io/App-Lista-de-tareas/"
                   class="btn btn-primary"
-                  >Proyecto</a
+                  >Site</a
                 >
               </div>
             </div>
@@ -241,17 +300,20 @@
     <!-- Seccion de contacto  -->
     <section id="contacto">
       <div class="contacto-container">
-        <h2>Contacto</h2>
+        <h2>Contato</h2>
         <div class="contacto-content">
           <div class="contacto-informacion">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p><b>Bem-vindo/a à minha página de contato!</b></p>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
-              commodi ex beatae animi.
+              Adoraria ouvir seus comentários, responder às suas perguntas ou
+              discutir qualquer colaboração interessante. Se você estiver
+              interessado/a em trabalharmos juntos/as em um projeto empolgante,
+              não hesite em entrar em contato.
             </p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque
-              nesciunt, animi ipsam nihil unde tempore, t necessit.
+              Obrigado/a por visitar meu portfólio e considerar trabalhar
+              comigo. Estou animado/a com a oportunidade de colaborar com você e
+              ajudá-lo/a a alcançar seus objetivos.
             </p>
             <div class="iconos-contacto">
               <a
@@ -292,13 +354,13 @@
           <div class="formulario-container">
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label"
-                >Nombre</label
+                >Nome</label
               >
               <input
                 type="text"
                 class="form-control"
                 id="exampleFormControlInput1"
-                placeholder="Escribe tu nombre"
+                placeholder="Insira seu nome"
               />
             </div>
             <div class="mb-3">
@@ -314,18 +376,18 @@
             </div>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label"
-                >Asunto</label
+                >Assunto</label
               >
               <input
                 type="text"
                 class="form-control"
                 id="exampleFormControlInput1"
-                placeholder="Escribe tu asunto"
+                placeholder="Insira seu assunto"
               />
             </div>
             <div class="mb-3">
               <label for="exampleFormControlTextarea1" class="form-label"
-                >Mensaje</label
+                >Mensagem</label
               >
               <textarea
                 class="form-control"
